infrastructure/manifests/default/alba/duchess.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mrs-fitz-james-stuart-de-silva
  namespace: default
  labels:
    app.kubernetes.io/managed-by: argo-cd
    company/name: "casa de alba"
    company/employee-name: cayetana
    company/employee-position: duchess
spec:
  containers:
    - name: main
      image: docker.io/bitnami/os-shell:latest
      imagePullPolicy: Always
      command:
        - sleep
      args:
        - infinity
      resources: {}
