infrastructure/manifests/default/alba/gardener.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pepe
  namespace: default
  labels:
    app.kubernetes.io/managed-by: argo-cd
    company/name: alba-house
    company/employee-name: pepe
    company/employee-position: gardener
spec:
  containers:
    - name: main
      image: docker.io/bitnami/os-shell:latest
      imagePullPolicy: Always
      command:
        - sleep
      args:
        - infinity
      resources: {}
