infrastructure/manifests/default/alba/security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security
  namespace: default
  labels:
    app.kubernetes.io/managed-by: argo-cd
    company/name: alba-house
    company/system: security
spec:
  selector:
    matchLabels:
      company/name: alba-house
      company/system: security
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        company/name: alba-house
        company/system: security
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: main
          image: docker.io/juanariza131/api-mock:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            httpGet:
              path: /live
              port: http
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          resources: {}
