infrastructure/manifests/default/alba/thieve.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tejado
  namespace: default
  labels:
    app.kubernetes.io/managed-by: argo-cd
    company/name: unknown
    company/employee-name: antonio
    company/employee-position: capo
spec:
  containers:
    - name: main
      image: docker.io/bitnami/os-shell:latest
      imagePullPolicy: Always
      command:
        - sleep
      args:
        - infinity
      resources: {}
