infrastructure/manifests/default/alba/l3-l4-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: security-l3-l4-policy
spec:
  description: "L3-L4 policy to restrict Alba House access to employees only"
  endpointSelector:
    matchLabels:
      company/name: alba-house
      company/system: security
  ingress:
  - fromEndpoints:
    - matchLabels:
        company/name: alba-house
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
